kubernetes/deployment-3s.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: <APP_NAMESPACE>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <APP_NAME>
  namespace: <APP_NAMESPACE>
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: <APP_NAME>
    spec:
      containers:
      - name: <CONTAINER_NAME>
        image: <IMAGE_TAG>
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1
            memory: 1Gi
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        - containerPort: 37389
          name: ssh
        volumeMounts:
        - name: tz-america
          mountPath: /etc/localtime
        - name: 3s-uploads
          mountPath: /var/www/html/3s/public/uploads
      volumes:
        - name: tz-america
          hostPath:
            path: /usr/share/zoneinfo/America/Fortaleza
            type: File
        - name: 3s-uploads
          emptyDir: {}
  selector:
    matchLabels:
        app: <APP_NAME>
---
apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>
  namespace: <APP_NAMESPACE>
  labels:
    app: <APP_NAME>
  annotations:
    metallb.universe.tf/address-pool: int-pool
spec:
  selector:
    app: <APP_NAME>
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 37389
      targetPort: 37389
      name: ssh
  type: LoadBalancer
  loadBalancerIP: 10.130.0.153
  externalTrafficPolicy: Local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: <APP_NAME>
   namespace: <APP_NAMESPACE>
   annotations:
      haproxy.org/check: enabled
      haproxy.org/forwarded-for: enabled
      haproxy.org/load-balance: roundrobin
      haproxy.org/ssl-redirect: 'true'
      haproxy.org/ssl-redirect-code: '301'
spec:
  rules:
    - host: hello-world-test.unilab.edu.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
               service:
                  name: <APP_NAME>
                  port:
                     number: 80
